<resources>
    <string name="app_name">GetTaxi</string>
    <string name="addRide">הזמן נסיעה</string>
    <string name="orderRide">הזמנת נסיעה</string>
    <string name="name">שם נוסע</string>
    <string name="phonenumber">טלפון נייד</string>
    <string name="email">כתובת מייל</string>
    <string name="cancelOrder">בטל הזמנה</string>
    <string name="title_activity_maps">Map</string>
    <string name="locationrequired">מיקום נצרך</string>
    <string name="locationdescription">שירות מיקום אינו פעיל. על מנת להמשיך הדלק את מיקום המכשיר.</string>
    <string name="settings">הגדרות</string>
    <string name="cancel">ביטול</string>
    <string name="requestsent">בקשתך נשלחה</string>
    <string name="waitfordriver">נא להמתין לנהג</string>
    <string name="order_successful">הזמנה בוצעה בהצלחה!</string>
    <string name="targetaddress">כתובת יעד</string>
    <string name="pickupaddress">כתובת איסוף</string>
    <string name="findLocationError">לא נמצא מיקום! וודא שה-GPS דלוק ונסה שוב.</string>
    <string name="searchDriver">מחפש עבורך נהג...</string>
    <string name="your_current_location">המיקום הנוכחי שלך</string>
    <string name="areyousure">האם אתה בטוח?</string>
    <string name="yes">כן</string>
    <string name="ok">אישור</string>
</resources>
